javanetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: javawebappnetworkpolicy
  namespace: test-ns
spec:
  podSelector:
    matchLabels:
      app: javawebapp
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: default
      ports:
      - protocol: TCP
        port: 80
